# AgenticAi-deployemnt-attack-analyzer

./: .gitignore  README.md  ReconMind_Presentation.pptx  ReconMind_Presentation_Detailed.pptx  Reconmind(1).pptx  Reconmind.pptx  antigravity.desktop  claude_codebase_export.md  config.yaml  deployment_guide.md  export_for_claude.py  ml_project_info.txt  pyproject.toml  reconmind_architecture_overview.md  reconstructed_project_context.md  requirements.txt
analytics/: deep_model.py
data/: .gitkeep  reconmind.db-shm  reconmind.db-wal
dataset/: audit_results.json  dataset_events.csv  dataset_runs.csv  dataset_summary.json
frontend/: index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.jsx  index.css
mock_data/: customers.json  knowledge_base.json  tickets.json
models/classification/: best_model.joblib  feature_importances.csv
models/deep/: results.json
models/deep_behavioral/: results.json  text_embeddings.npy
models/detection/: best_model.joblib
reconmind/: __init__.py  config.py
reconmind.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
reconmind/analytics/: __init__.py  audit_report.py  classification_model.py  dataset_audit.py  detection_model.py  evaluation.py  features.py
scripts/: check_setup.py  export_static_api.py  run_attack_sample.py  run_campaign.py  run_classification_model.py  run_clean_campaign_sample.py  run_dataset_audit.py  run_defense_comparison.py  run_defense_sample.py  run_detection_model.py  run_dummy_pipeline.py  run_real_pipeline.py  run_verification_sample.py  train_deep_model.py
(+609 files in other folders)
