[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reconmind"
version = "0.1.0"
requires-python = ">=3.11"
# Keep in sync with requirements.txt — this enables `pip install -e .`
# which makes `from reconmind.config import cfg` work from any CWD,
# and allows pytest to discover tests without sys.path hacks.
dependencies = [
    "pyyaml>=6.0.2",
    "pydantic>=2.13.4",
    "langgraph>=1.2.7",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
# Discovers `reconmind` (the inner package) from the repo root.
where = ["."]
include = ["reconmind*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
